7.multi-service-k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    ports:
        - port: 3000
          targetPort: 3000
          #nodePort: 31515 => this property is not use for cluster ip
    selector:
        component: web
