7.multi-service-k8s/psotgres-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: postgres
    template:
        metadata:
            labels:
                component: postgres
        spec:
            containers:
                - name: postgres
                  image: postgres:14-alpine
                  ports:
                      - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
    name: postgres-cluster-api-service
spec:
    type: ClusterIP
    ports:
        - port: 5432
          targetPort: 5432
    selector:
        component: postgres
