7.multi-service-k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: server-cluster-api-service
spec:
    type: ClusterIP
    ports:
        - port: 5000
          targetPort: 5000
    selector:
        component: server
